# bigbrotr

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  BigBrotr_Specification.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_AUDIT.md  CONTRIBUTING.md  FINAL_REVIEW_COMPLETE.md  IMPROVEMENTS_ROADMAP.md  PROJECT_SPECIFICATION.md  PROJECT_STATUS.md  PROMPT_Phase1_Core_with_nostr_tools.md  QUICK_REFERENCE.md  README.md  RELEASE.md  SECURITY.md  TODO.md  URI_generic_regex.py  bigbrotr.py  docker-compose.yml  env.example  event.py  events_syncronizer.ipynb  init.sql  pgbouncer.ini  postgresql.conf  priority_relays.txt  prompt.md  pyproject.toml  relay.py  relay_metadata.py  relays_monitor.ipynb  relays_seed.txt  requirements-dev.txt  requirements.txt  requirements_short.txt  (+6 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
brotr_core/: __init__.py  registry.py
brotr_core/database/: __init__.py  base_event_repository.py  brotr.py  database_pool.py  db_error_handler.py  metadata_repository.py  relay_repository.py
brotr_core/services/: base_synchronizer.py  rate_limiter.py
deployments/bigbrotr/: README.md  docker-compose.yml  env.example
deployments/lilbrotr/: README.md  docker-compose.yml  env.example
dockerfiles/: finder  initializer  monitor  pgbouncer  pgbouncer_entrypoint.sh  priority_synchronizer  priority_syncronizer  synchronizer  syncronizer
docs/: ARCHITECTURE.md  ARCHITECTURE_VISUAL.md  CONFIGURATION.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md  HOW_TO_CREATE_BROTR.md  MIGRATION_GUIDE.md  PLUGIN_ARCHITECTURE_SUMMARY.md
docs/architecture/: BROTR_ARCHITECTURE.md  COMPARISON.md
docs/old/: BROTR_DEPENDENCY_INJECTION_REFACTORING.md  BROTR_IMPROVEMENTS_SUMMARY.md  POOL_DOCUMENTATION_UPDATE.md  POOL_IMPROVEMENTS_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  RENAMING_SUMMARY.md  SERVICE_WRAPPER_DESIGN.md  TIMEOUT_REFACTORING_SUMMARY.md
docs/summaries/: COMPLETE_MIGRATION_SUMMARY.md  COMPREHENSIVE_IMPROVEMENTS_COMPLETE.md  FILES_SUMMARY.md  FIXES_APPLIED.md  IMPLEMENTATION_COMPLETE.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_REVIEW_COMPLETE.md  README.md  REORGANIZATION_SUMMARY.md  UPDATES_SUMMARY.md
implementations/_template/: README.md  config.yaml
implementations/_template/repositories/: event_repository.py
implementations/_template/sql/: init.sql
implementations/bigbrotr/: .env.example  Dockerfile  docker-compose.yaml
implementations/bigbrotr/config/postgres/init/: 00_extensions.sql  01_utility_functions.sql  02_tables.sql  03_indexes.sql  04_integrity_functions.sql  (+2 more)
implementations/bigbrotr/data/: priority_relays.txt
implementations/bigbrotr/pgbouncer/: pgbouncer.ini  userlist.txt  userlist.txt.template
implementations/bigbrotr/postgres/: postgresql.conf
implementations/bigbrotr/postgres/init/: 00_extensions.sql  02_tables.sql  04_integrity_functions.sql  05_procedures.sql  06_views.sql
implementations/bigbrotr/repositories/: event_repository.py
implementations/bigbrotr/yaml/core/: brotr.docker.yaml  brotr.pgbouncer.yaml  brotr.yaml
implementations/bigbrotr/yaml/services/: finder.yaml  initializer.yaml  monitor.yaml  priority_synchronizer.yaml  synchronizer.yaml
implementations/lilbrotr/: .env.example  Dockerfile  docker-compose.yaml
implementations/lilbrotr/data/: seed_relays.txt
implementations/lilbrotr/pgbouncer/: pgbouncer.ini
implementations/lilbrotr/postgres/: postgresql.conf
implementations/lilbrotr/postgres/init/: 00_extensions.sql  01_utility_functions.sql  02_tables.sql  03_indexes.sql  04_integrity_functions.sql  05_procedures.sql  06_views.sql  99_verify.sql
implementations/lilbrotr/repositories/: event_repository.py
implementations/lilbrotr/sql/: init.sql
implementations/lilbrotr/yaml/core/: brotr.yaml
implementations/lilbrotr/yaml/services/: finder.yaml  initializer.yaml  monitor.yaml  priority_synchronizer.yaml  synchronizer.yaml
releases/: v1.0.0.md  v2.0.0.md
seed/: generate_seed.py  relays_nostr_watch.txt  relays_seed.csv  relays_seed.txt  relays_url.csv
shared/: __init__.py
shared/config/: __init__.py  config.py
shared/utils/: __init__.py  functions.py  logging_config.py
src/: __init__.py  base_synchronizer.py  bigbrotr.py  bigbrotr_async.py  compute_relay_metadata.py  config.py  constants.py  database_pool.py  db_error_handler.py  event.py  event_repository.py  fetch_events.py  finder.py  functions.py  healthcheck.py  initializer.py  logging_config.py  metadata_repository.py  monitor.ipynb  monitor.py  priority_synchronizer.py  priority_syncronizer.py  process_relay.py  process_relay_bkp.py  relay.py  relay_loader.py  relay_metadata.py  relay_repository.py  single_syncronizer.py  synchronizer.py  syncronizer.ipynb  syncronizer.py  utils.py
src/core/: __init__.py  base_service.py  brotr.py  logger.py  pool.py  service.py  utils.py  utils.py.bak
src/services/: __init__.py  __main__.py  api.py  dvm.py  finder.py  initializer.py  monitor.py  monitor.py.bak  priority_synchronizer.py  priority_synchronizer.py.bak  synchronizer.py  synchronizer.py.bak
tests/: __init__.py  bigbrotr_data_overview.html  bigbrotr_data_overview.ipynb  conftest.py  kinds_info.csv  nips_info.csv  relay_event_counts.csv  relay_synchronization.csv  relays_syncronization.csv  test.html  test.ipynb  test_composition.py  test_improved_service.py  test_service_wrapper.py
tests/integration/: __init__.py  test_docker.py
tests/unit/: __init__.py  test_base_service.py  test_brotr.py  test_finder.py  test_initializer.py  test_logger.py  test_monitor.py  test_pool.py  test_priority_synchronizer.py  test_service.py  test_synchronizer.py
